main.css
main {
  padding-top: 100px;
}

main .row {
  margin-bottom: 20px;
}

.card {
  border: 1px solid #DDDDDD;
}

.card-pic {
  height: 300px;
  text-align: center;
  padding-top: 20px;
}

* {
  font-family: "Roboto", sans-serif;
}

h1 {
  font-size: 20px;
}

